# hidden

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
migrations/: 001_initial.sql  002_settings.sql  003_transfer_limits_settings.sql
src/: config.rs  error.rs  main.rs
src/adapters/: adapter_115.rs  mod.rs
src/api/: health.rs  mod.rs  resources.rs  settings.rs  shares.rs  tasks.rs  webui.rs
src/db/: mod.rs  models.rs
src/services/: mod.rs  organizer.rs  share_limiter.rs  tmdb.rs
src/utils/: mod.rs
src/workers/: import_worker.rs  mod.rs
static/: index.html
