[package]
name = "hidden"
version = "0.1.0"
edition = "2021"
description = "洞天福地 (Hidden) - 115 Share Pool Automation System"
authors = ["Hidden Team"]
license = "MIT"

[[bin]]
name = "hidden"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Config & env
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Redis (task queue / cache)
redis = { version = "0.24", features = ["tokio-comp", "aio", "json"] }

# Cron scheduler
tokio-cron-scheduler = "0.9"

# Retry logic
tokio-retry = "0.3"

# JWT authentication
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

# Random numbers (jitter)
rand = "0.8"

# Regex (file name parsing)
regex = "1"

# Lazy initialization
once_cell = "1"

# URL parsing
url = "2"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
